# arcbox

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-BSL-1.1  LICENSE-MIT  NOTICE  NOTICE.md  README.md  about.hbs  about.toml
.github/: copilot-instructions.md
.github/workflows/: arcbox-agent-linux.yml  arcbox-vm-linux.yml  check-nested-kvm.yml  ci.yml  docker-api-e2e.yml  e2e-tests.yml  release.yml
Formula/: arcbox.rb
app/arcbox/: Cargo.toml  README.md
app/arcbox-api/: Cargo.toml  README.md
app/arcbox-api/src/: error.rs  grpc.rs  lib.rs  sandbox_conv.rs  sandbox_linux.rs  server.rs
app/arcbox-cli/: CLAUDE.md  Cargo.toml  README.md
app/arcbox-cli/src/: lib.rs  main.rs  terminal.rs
app/arcbox-cli/src/commands/: boot.rs  create.rs  daemon.rs  diagnose.rs  dns.rs  docker.rs  exec.rs  images.rs  logs.rs  machine.rs  mod.rs  ps.rs  pull.rs  restart.rs  rm.rs  run.rs  sandbox.rs  stop.rs
app/arcbox-cli/tests/: integration.rs
app/arcbox-core/: Cargo.toml  README.md
app/arcbox-core/src/: agent_client.rs  boot_assets.rs  config.rs  error.rs  event.rs  lib.rs  machine.rs  persistence.rs  runtime.rs  trace.rs  vm.rs  vm_lifecycle.rs
app/arcbox-daemon/: Cargo.toml
app/arcbox-docker/: CLAUDE.md  Cargo.toml  README.md
comm/arcbox-grpc/: CLAUDE.md  Cargo.toml
comm/arcbox-protocol/: README.md  build.rs
comm/arcbox-transport/: CLAUDE.md  Cargo.toml  README.md
common/arcbox-error/: Cargo.toml
common/arcbox-error/src/: common.rs  lib.rs
crates/arcbox/: CLAUDE.md
crates/arcbox-api/: CLAUDE.md  Cargo.toml  README.md  build.rs
crates/arcbox-api/proto/: api.proto
crates/arcbox-api/src/: error.rs  grpc.rs  lib.rs  server.rs
crates/arcbox-cli/: Cargo.toml  README.md
crates/arcbox-cli/src/: client.rs  lib.rs  main.rs  terminal.rs
crates/arcbox-cli/src/commands/: boot.rs  daemon.rs  diagnose.rs  dns.rs  docker.rs  exec.rs  image.rs  images.rs  logs.rs  machine.rs  mod.rs  ps.rs  pull.rs  rm.rs  run.rs  start.rs  stop.rs  version.rs
crates/arcbox-cli/tests/: integration.rs
crates/arcbox-container/: Cargo.toml  README.md
crates/arcbox-core/: CLAUDE.md  Cargo.toml  README.md
crates/arcbox-core/src/: agent_client.rs  boot_assets.rs  config.rs  error.rs  event.rs  lib.rs  machine.rs  persistence.rs  runtime.rs  vm.rs  vm_lifecycle.rs
crates/arcbox-core/src/container_backend/: guest_docker.rs
crates/arcbox-docker/: Cargo.toml  README.md
crates/arcbox-docker-tools/: Cargo.toml
crates/arcbox-docker/src/: api.rs  context.rs  error.rs  handlers.rs  lib.rs  server.rs  trace.rs  types.rs
crates/arcbox-docker/tests/: api_tests.rs  events_v143.rs
crates/arcbox-error/: CLAUDE.md
crates/arcbox-fs/: Cargo.toml  README.md
crates/arcbox-grpc/: CLAUDE.md  README.md  build.rs
crates/arcbox-hypervisor/: CLAUDE.md  Cargo.toml
crates/arcbox-hypervisor/examples/: boot_vm.rs  perf_boot.rs
crates/arcbox-hypervisor/src/: error.rs  lib.rs  traits.rs  types.rs
crates/arcbox-hypervisor/src/darwin/: ffi.rs  hypervisor.rs  memory.rs  mod.rs  vcpu.rs  vm.rs
crates/arcbox-hypervisor/src/linux/: ffi.rs  hypervisor.rs  memory.rs  mod.rs  vcpu.rs  vm.rs
crates/arcbox-hypervisor/tests/: dirty_tracking_test.rs  snapshot_test.rs  vcpu_e2e_test.rs  vcpu_integration_test.rs  vm_boot_test.rs
crates/arcbox-image/: Cargo.toml
crates/arcbox-image/src/: error.rs  extract.rs  layer.rs  lib.rs  manifest.rs  pull.rs  registry.rs  store.rs
crates/arcbox-net/: CLAUDE.md  Cargo.toml
crates/arcbox-oci/: Cargo.toml
crates/arcbox-protocol/: CLAUDE.md  Cargo.toml  build.rs
crates/arcbox-transport/: Cargo.toml
crates/arcbox-virtio/: Cargo.toml
crates/arcbox-vmm/: Cargo.toml
crates/arcbox-vmm/examples/: vmm_boot.rs
crates/arcbox-vmm/src/: boot.rs  builder.rs  device.rs  error.rs  event.rs  fdt.rs  irq.rs  lib.rs  memory.rs  vcpu.rs  vmm.rs
crates/arcbox-vz/: Cargo.toml
crates/arcbox-vz/examples/: simple_vm.rs  virtiofs.rs  vsock_echo.rs  vsock_listen.rs
crates/arcbox-vz/src/: delegate.rs  lib.rs  socket.rs  vm.rs
crates/arcbox-vz/src/configuration/: platform.rs  vm_config.rs
crates/arcbox-vz/src/device/: balloon.rs  entropy.rs  filesystem.rs  mod.rs  network.rs  serial.rs
crates/arcbox-vz/src/ffi/: block.rs  dispatch.rs  foundation.rs  mod.rs  runloop.rs  runtime.rs
docs/: boot-assets.md
guest/arcbox-agent/: CLAUDE.md  Cargo.toml  README.md
guest/arcbox-agent/examples/: sandbox_smoke.rs
guest/arcbox-agent/src/: agent.rs  config.rs  container.rs  dns.rs  exec.rs  init.rs  lib.rs  log_watcher.rs  machine_init.rs  main.rs  mount.rs  pty.rs  rpc.rs  sandbox.rs  shim.rs  supervisor.rs
guest/arcbox-agent/tests/: sandbox_service_manager.rs
hypervisor/arcbox-virtio/: CLAUDE.md
hypervisor/arcbox-vm/: Cargo.toml  README.md  build.rs
hypervisor/arcbox-vm/vmm-guest-agent/: Cargo.toml
hypervisor/arcbox-vm/vmm-guest-agent/src/: main.rs
hypervisor/arcbox-vmm/: CLAUDE.md  Cargo.toml
hypervisor/arcbox-vz/: CLAUDE.md
pro/arcbox-fs-enhanced/: CLAUDE.md  Cargo.toml  README.md
pro/arcbox-fs-enhanced/src/: cache.rs  lib.rs  prefetch.rs
pro/arcbox-net-advanced/: CLAUDE.md  Cargo.toml  README.md
pro/arcbox-net-advanced/src/: dns.rs  lib.rs  vpn.rs
pro/arcbox-perf/: CLAUDE.md  Cargo.toml  README.md
pro/arcbox-perf/src/: lib.rs
pro/arcbox-snapshot/: CLAUDE.md  Cargo.toml  README.md
scripts/: dev.arcbox.daemon.plist  docker-cli-e2e.sh  install.sh  package-dmg.sh  rebuild-run-daemon.sh  setup-dev-boot-assets.sh  test-boot-assets.sh
services/arcbox-container/: CLAUDE.md  Cargo.toml
services/arcbox-fs/: CLAUDE.md  Cargo.toml
services/arcbox-image/: CLAUDE.md  README.md
services/arcbox-oci/: CLAUDE.md
tests/e2e/: Cargo.toml  README.md
tests/e2e/src/: agent.rs  assertions.rs  fixtures.rs  harness.rs  lib.rs  vm.rs
tests/e2e/tests/: container_lifecycle.rs  docker_compat.rs  docker_context.rs  full_workflow.rs  image_ops.rs  smoke_matrix.rs  vm_lifecycle.rs
tests/integration/: run_e2e.sh
tests/resources/: build-initramfs-minimal.sh  build-initramfs.sh  build-kernel.sh  download-kernel.sh
tools/pstramp/: Makefile  pstramp.c
(+188 files in other folders)
