[workspace]
resolver = "2"
members = [
    # ============================================
    # Core Layer (MIT OR Apache-2.0)
    # ============================================

    # Low-level infrastructure
    "crates/arcbox-hypervisor",
    "crates/arcbox-vmm",
    "crates/arcbox-virtio",

    # Services
    "crates/arcbox-fs",
    "crates/arcbox-net",
    "crates/arcbox-container",
    "crates/arcbox-image",
    "crates/arcbox-oci",

    # Communication (see architecture/cli-api.md)
    "crates/arcbox-protocol",
    "crates/arcbox-transport",
    "crates/arcbox-docker",

    # Core and interfaces
    "crates/arcbox-core",
    "crates/arcbox-api",
    "crates/arcbox-cli",

    # Guest components
    "guest/arcbox-agent",

    # ============================================
    # Pro Layer (BSL-1.1)
    # ============================================
    "pro/arcbox-fs-enhanced",
    "pro/arcbox-net-advanced",
    "pro/arcbox-snapshot",
    "pro/arcbox-perf",
]

# ============================================
# Enterprise Layer (Proprietary, separate repos)
# ============================================
# Located in arcboxd org private repositories:
#   - arcboxd/arcbox-desktop   (GPUI desktop app)
#   - arcboxd/arcbox-sso       (SSO/LDAP integration)
#   - arcboxd/arcbox-audit     (Audit logging)
#   - arcboxd/arcbox-k8s       (Kubernetes integration)

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AprilNEA/arcbox"
authors = ["AprilNEA <dev@aprilnea.me> (https://aprilnea.me)"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "tracing"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
prost-build = "0.13"

# ttrpc (high-performance RPC)
ttrpc = "0.8"
ttrpc-codegen = "0.5"

# HTTP server (Docker REST API)
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = { version = "1", features = ["full"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# Bytes and buffer
bytes = "1"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
dirs = "6"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hostname
hostname = "0.4"

# Nix (Unix APIs)
nix = { version = "0.29", features = ["fs", "process", "socket", "ioctl", "mman"] }

# libc
libc = "0.2"

# Internal crates (Core layer)
arcbox-hypervisor = { path = "crates/arcbox-hypervisor" }
arcbox-vmm = { path = "crates/arcbox-vmm" }
arcbox-virtio = { path = "crates/arcbox-virtio" }
arcbox-fs = { path = "crates/arcbox-fs" }
arcbox-net = { path = "crates/arcbox-net" }
arcbox-container = { path = "crates/arcbox-container" }
arcbox-image = { path = "crates/arcbox-image" }
arcbox-oci = { path = "crates/arcbox-oci" }
arcbox-protocol = { path = "crates/arcbox-protocol" }
arcbox-transport = { path = "crates/arcbox-transport" }
arcbox-docker = { path = "crates/arcbox-docker" }
arcbox-core = { path = "crates/arcbox-core" }
arcbox-api = { path = "crates/arcbox-api" }

# Internal crates (Pro layer)
arcbox-fs-enhanced = { path = "pro/arcbox-fs-enhanced" }
arcbox-net-advanced = { path = "pro/arcbox-net-advanced" }
arcbox-snapshot = { path = "pro/arcbox-snapshot" }
arcbox-perf = { path = "pro/arcbox-perf" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
# Faster incremental builds
incremental = true

[profile.dev.package."*"]
# Optimize dependencies in dev mode for better performance
opt-level = 2
