[workspace]
resolver = "2"
members = [
    # ============================================
    # Core Layer (MIT OR Apache-2.0)
    # ============================================

    # Low-level infrastructure
    "crates/arcbox-vz",
    "crates/arcbox-hypervisor",
    "crates/arcbox-vmm",
    "crates/arcbox-virtio",

    # Services
    "crates/arcbox-fs",
    "crates/arcbox-net",
    "crates/arcbox-container",
    "crates/arcbox-image",
    "crates/arcbox-oci",

    # Communication (see architecture/cli-api.md)
    "crates/arcbox-protocol",
    "crates/arcbox-grpc",
    "crates/arcbox-transport",
    "crates/arcbox-docker",

    # Core and interfaces
    "crates/arcbox-core",
    "crates/arcbox-api",
    "crates/arcbox-cli",

    # Facade crate
    "crates/arcbox",

    # Guest components
    "guest/arcbox-agent",

    # ============================================
    # Pro Layer (BSL-1.1)
    # ============================================
    "pro/arcbox-fs-enhanced",
    "pro/arcbox-net-advanced",
    "pro/arcbox-snapshot",
    "pro/arcbox-perf",

    # ============================================
    # Test Infrastructure
    # ============================================
    "tests/e2e",
]

# ============================================
# Enterprise Layer (Proprietary, separate repos)
# ============================================
# Located in arcboxd org private repositories:
#   - arcboxd/arcbox-desktop   (GPUI desktop app)
#   - arcboxd/arcbox-sso       (SSO/LDAP integration)
#   - arcboxd/arcbox-audit     (Audit logging)
#   - arcboxd/arcbox-k8s       (Kubernetes integration)

[workspace.package]
version = "0.0.1-alpha.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AprilNEA/arcbox"
authors = ["AprilNEA <dev@aprilnea.me> (https://aprilnea.me)"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "tracing"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
prost-build = "0.13"

# ttrpc (high-performance RPC)
ttrpc = "0.8"
ttrpc-codegen = "0.5"

# HTTP server (Docker REST API)
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = { version = "1", features = ["full"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"
pin-project-lite = "0.2"

# Terminal
crossterm = "0.27"

# Bytes and buffer
bytes = "1"

# Concurrent data structures
dashmap = "6"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
dirs = "6"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hostname
hostname = "0.4"

# Nix (Unix APIs)
nix = { version = "0.29", features = ["fs", "process", "socket", "ioctl", "mman"] }

# libc
libc = "0.2"

# Internal crates (Core layer)
arcbox-vz = { version = "0.0.1-alpha.1", path = "crates/arcbox-vz" }
arcbox-hypervisor = { version = "0.0.1-alpha.1", path = "crates/arcbox-hypervisor" }
arcbox-vmm = { version = "0.0.1-alpha.1", path = "crates/arcbox-vmm" }
arcbox-virtio = { version = "0.0.1-alpha.1", path = "crates/arcbox-virtio" }
arcbox-fs = { version = "0.0.1-alpha.1", path = "crates/arcbox-fs" }
arcbox-net = { version = "0.0.1-alpha.1", path = "crates/arcbox-net" }
arcbox-container = { version = "0.0.1-alpha.2", path = "crates/arcbox-container" }
arcbox-image = { version = "0.0.1-alpha.1", path = "crates/arcbox-image" }
arcbox-oci = { version = "0.0.1-alpha.1", path = "crates/arcbox-oci" }
arcbox-protocol = { version = "0.0.1-alpha.1", path = "crates/arcbox-protocol" }
arcbox-grpc = { version = "0.0.1-alpha.1", path = "crates/arcbox-grpc" }
arcbox-transport = { version = "0.0.1-alpha.1", path = "crates/arcbox-transport" }
arcbox-docker = { version = "0.0.1-alpha.1", path = "crates/arcbox-docker" }
arcbox-core = { version = "0.0.1-alpha.2", path = "crates/arcbox-core" }
arcbox-api = { version = "0.0.1-alpha.1", path = "crates/arcbox-api" }
arcbox-cli = { version = "0.0.1-alpha.1", path = "crates/arcbox-cli" }
arcbox-agent = { version = "0.0.1-alpha.1", path = "guest/arcbox-agent" }
arcbox = { version = "0.0.1-alpha.1", path = "crates/arcbox" }

# Internal crates (Pro layer)
arcbox-fs-enhanced = { version = "0.0.1-alpha.1", path = "pro/arcbox-fs-enhanced" }
arcbox-net-advanced = { version = "0.0.1-alpha.1", path = "pro/arcbox-net-advanced" }
arcbox-snapshot = { version = "0.0.1-alpha.1", path = "pro/arcbox-snapshot" }
arcbox-perf = { version = "0.0.1-alpha.1", path = "pro/arcbox-perf" }

# Test infrastructure
arcbox-e2e = { version = "0.0.1-alpha.1", path = "tests/e2e" }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
# Faster incremental builds
incremental = true

[profile.dev.package."*"]
# Optimize dependencies in dev mode for better performance
opt-level = 2
