[package]
name = "arcbox-cli"
description = "Command-line interface for ArcBox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "arcbox_cli"
path = "src/lib.rs"

[[bin]]
name = "arcbox"
path = "src/main.rs"

[dependencies]
arcbox-api = { workspace = true }
arcbox-core = { workspace = true }
arcbox-docker = { workspace = true }
arcbox-grpc = { workspace = true }
arcbox-protocol = { workspace = true }
arcbox-transport = { workspace = true }
tonic = { workspace = true }
tower = "0.5"
hyper = { workspace = true }
hyper-util = "0.1"
http-body-util = "0.1"
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = "0.7"
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
crossterm = { workspace = true }
macos-resolver = { workspace = true }
libc.workspace = true

[features]
default = []

[dev-dependencies]
tempfile = "3.14"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util"] }
axum = { workspace = true }
tower = "0.5"
hyper = { workspace = true, features = ["server", "http1"] }
hyper-util = "0.1"
assert_cmd = "2.0"
predicates = "3.1"
