[package]
name = "arcbox-cli"
description = "Command-line interface for ArcBox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "arcbox"
path = "src/main.rs"

[dependencies]
arcbox-core = { workspace = true }
arcbox-docker = { workspace = true }
arcbox-image = { workspace = true }
arcbox-protocol = { workspace = true }
arcbox-transport = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
hyper = { workspace = true }
hyper-util = "0.1"
http-body-util = "0.1"
tower = "0.5"

[features]
default = []
