[package]
name = "arcbox-docker"
description = "Docker REST API compatibility layer for ArcBox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
arcbox-container = { workspace = true }
arcbox-core = { workspace = true }
arcbox-image = { workspace = true }
arcbox-protocol = { workspace = true }
arcbox-transport = { workspace = true }
arcbox-error = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hostname = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
hex = "0.4"
dirs = { workspace = true }
sysinfo = "0.32"
tokio-stream = "0.1"
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = "3"
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
hyper = { workspace = true }

[features]
default = []
