[package]
name = "arcbox-hypervisor"
description = "Cross-platform hypervisor abstraction layer for ArcBox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
arcbox-vz = { path = "../arcbox-vz" }
objc2 = "0.6"
block2 = "0.6"

# Link Virtualization.framework on macOS
[target.'cfg(target_os = "macos")'.build-dependencies]
# None needed - we use runtime linking

[target.'cfg(target_os = "linux")'.dependencies]
# nix for ioctl macros
nix = { version = "0.29", features = ["ioctl"] }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "boot_vm"
required-features = []

[features]
default = []
