[package]
name = "arcbox-net-advanced"
description = "Advanced networking features for ArcBox Pro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "BSL-1.1"
repository.workspace = true
authors.workspace = true

[dependencies]
arcbox-net = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[features]
default = []
