[package]
name = "arcbox-perf"
description = "Performance monitoring for ArcBox Pro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

[features]
default = []
