[package]
name = "arcbox-e2e"
version = "0.0.1-alpha.1"
edition = "2024"
publish = false
description = "End-to-end integration tests for ArcBox"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "test-util"] }

# Testing utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serial_test = "3"
